syntax = "proto3";

// 命 令 号: 1011
// 命令名称: visionmodule_online_identify
// 命令描述: 在线识别
// 文件名称: d20c1011_visionmodule_online_identify.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbVisionmoduleOnlineIdentify";

message VisionmoduleOnlineIdentifyRequest {
  // ATTR: REQUSET
  string url = 1;
  string request_body = 2;
  repeated string img_ph = 3;
}

message VisionmoduleOnlineIdentifyResponse {
  // ATTR: REQACK
  string info = 1;
  sint32 result = 2;
}
